gh 1.0.2 | npm 0.0.0 | New Title utils, package config

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "email": "it@pylar.org"
   },
   "funding": {
-    "type": "Paypal",
-    "url": "https://miguelgargallo.com"
+    "type": "ko-fi",
+    "url": "https://ko-fi.com/miguelgargallo"
   },
   "repository": {
     "type": "git",
