--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "bioUrl": "https://raw.githubusercontent.com/m4tt72/m4tt72/master/README.md",
+  "bioUrl": "https://raw.githubusercontent.com/miguelgargallo/TermialX/master/README.md",
   "social": {
-    "instagram": "m4tt72",
-    "github": "m4tt72",
-    "linkedin": "yassinefathi"
+    "instagram": "miguelgargallo",
+    "github": "miguelgargallo",
+    "linkedin": "miguelgargallo.es"
   },
-  "theme": "gruvboxdark",
+  "theme": "hyper",
   "border": true
 }
